functionality added to outerr files, all file seems to work properly, although im trying to add read file as sys argument

--- a/project/history.txt
+++ b/project/history.txt
@@ -16,4 +16,34 @@ zakup
 raspberry
 150
 10
+zakup
+blueberry
+4
+100
+saldo
+-500
+wyplata
+saldo
+-500
+wyplata
+zakup
+limonka
+500
+1
+zakup
+limonka
+500
+1
+zakup
+limonka
+500
+1
+zakup
+limonka
+500
+1
+zakup
+malina
+5
+100
 stop
