finally functionality added

--- a/project/history.txt
+++ b/project/history.txt
@@ -10,40 +10,42 @@ raspberry
 5
 sprzedaz
 raspberry
-25000
+15000
 5
 zakup
 raspberry
 150
 10
 zakup
-blueberry
-4
-100
+gpc
+1
+60
+zakup
+gpc
+60
+1
+zakup
+gpc
+60
+1
+zakup
+gpc
+60
+1
+zakup
+gpc
+60
+1
 saldo
--500
-wyplata
+99999500000
+podatki
 saldo
--500
-wyplata
-zakup
-limonka
-500
-1
-zakup
-limonka
-500
-1
-zakup
-limonka
-500
-1
-zakup
-limonka
-500
-1
-zakup
-malina
-5
-100
+-99999500000
+podatki
+saldo
+99999500000
+podatki
+saldo
+-99999500000
+podatki
 stop
