--- a/project/history.txt
+++ b/project/history.txt
@@ -1,8 +1,8 @@
 saldo
-1000000
+100000
 wpłata początkowa
 saldo
--140000
+-14000
 zus
 zakup
 raspberry
@@ -16,4 +16,44 @@ zakup
 raspberry
 150
 10
+zakup
+f
+1
+1
+sprzedaz
+f
+1
+1
+zakup
+f
+1
+1
+sprzedaz
+f
+1
+1
+zakup
+f
+1
+1
+sprzedaz
+f
+1
+1
+zakup
+maliny
+15
+13
+zakup
+maliny
+2
+10
+zakup
+maliny
+1
+10
+sprzedaz
+maliny
+10
+33
 stop
